--- a/Terms_5.6.html
+++ b/Terms_5.6.html
@@ -3,63 +3,66 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Terms_5.6 – Rabbi Sacks</title>
+  <title>Terms_1.7 – Rabbi Sacks</title>
 
-  <!-- MOODLE SAFE (no <script>) -->
-  <!-- הדביקי את כל הבלוק לדף "תוכן מעוצב". אין CSS/JS חיצוני; הכל בתוך הבלוק. -->
-
+  <!-- MOODLE SAFE (no external files) -->
   <style>
     /* הכל ממוסגר בתוך .vbt-terms כדי למנוע זליגה לשאר הדף */
     .vbt-terms * { box-sizing: border-box; }
 
-    /* קופסאות אקורדיון – גרסת checkbox כדי לאפשר אנימציה גם בסגירה */
+    /* קופסאות אקורדיון – גרסת checkbox */
     .vbt-terms .vbt-acc { position: relative; border-radius: 18px; padding: 0; background: transparent; }
     .vbt-terms .vbt-toggle { position: absolute; inset: 0; opacity: 0; pointer-events: none; }
 
+    /* קפסולה: i (ימין) | טקסט (אמצע) | +/− (שמאל) */
     .vbt-terms .vbt-summary {
-      display: flex; align-items: center; gap: 12px; direction: rtl; cursor: pointer;
+      display: flex; align-items: center; justify-content: space-between; gap: 12px; direction: rtl; cursor: pointer;
       padding: 14px 18px; border-radius: 40px; background: #F8E8FF; font-weight: 800; font-size: 18px;
       box-shadow: inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
-      list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease;
+      list-style: none; outline: none; transition: box-shadow .35s ease, transform .2s ease, background-color .3s ease;
+      min-height: 56px; line-height: 1;
     }
     .vbt-terms .vbt-summary:hover { transform: translateY(-1px); }
     .vbt-terms .vbt-summary:focus-visible { outline: 2px solid #fe0100; outline-offset: 2px; }
+    /* פתיחה: הקפסולה מתחלפת לירקרק */
+    .vbt-terms .vbt-toggle:checked + .vbt-summary { background: #D7F6E4; box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04); }
 
-    /* מצב פתוח – צל מעט חזק יותר */
-    .vbt-terms .vbt-toggle:checked + .vbt-summary {
-      box-shadow: 0 6px 16px rgba(0,0,0,.06), inset 0 1px 0 rgba(255,255,255,.6), inset 0 0 0 1px rgba(0,0,0,.04);
-    }
+    /* כותרת במרכז */
+    .vbt-terms .vbt-title { flex: 1 1 auto; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-align: center; }
 
-    /* אייקון שמסתובב בפתיחה/בסגירה */
+    /* i – בימין: אדום בסגור, ירוק + סיבוב בפתוח */
     .vbt-terms .vbt-icon {
-      width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff; display: grid;
-      place-items: center; font-weight: 900; transition: transform .35s ease;
+      width: 28px; height: 28px; border-radius: 50%; background: #fe0100; color: #fff;
+      display: grid; place-items: center; font-weight: 900; transition: transform .35s ease, background-color .3s ease;
+      flex: 0 0 auto;
     }
-    .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { transform: rotate(180deg); }
+    .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-icon { background: #69DA98; transform: rotate(180deg); }
 
-    /* פנל תוכן – פייד אין/אאוט מלא + גלישה חלקה בגובה */
+    /* + / − – בשמאל (ללא JS) */
+    .vbt-terms .vbt-pm {
+      width: 32px; height: 32px; display: inline-flex; align-items: center; justify-content: center;
+      font-size: 24px; line-height: 1; font-weight: 900; flex: 0 0 auto;
+    }
+    .vbt-terms .vbt-pm::before { content: '+'; }
+    .vbt-terms .vbt-toggle:checked + .vbt-summary .vbt-pm::before { content: '−'; }
+
+    /* פנל תוכן – פייד אין/אאוט + גלישה חלקה בגובה */
     .vbt-terms .vbt-panel {
       margin-top: 10px; background: #D7F6E4; border-radius: 14px; padding: 0 16px; line-height: 1.55;
       max-height: 0; overflow: hidden; opacity: 0; transform: translateY(-6px);
       transition: max-height .5s ease, opacity .45s ease, transform .45s ease, padding .45s ease;
     }
-    .vbt-terms .vbt-toggle:checked ~ .vbt-panel {
-      padding: 16px; opacity: 1; transform: translateY(0); max-height: 1200px; /* מספיק לרוב התכנים */
-    }
+    .vbt-terms .vbt-toggle:checked ~ .vbt-panel { padding: 16px; opacity: 1; transform: translateY(0); max-height: 1200px; }
 
     /* גריד רספונסיבי */
-    .vbt-terms .vbt-grid {
-      display: grid; grid-template-columns: 1fr; gap: 18px; max-width: 1000px; margin: 0 auto;
-    }
-    /* מסך רחב: תמיד שתי עמודות בדיוק */
-    @media (min-width: 700px) {
-      .vbt-terms .vbt-grid { grid-template-columns: repeat(2, minmax(0,1fr)); }
-    }
+    \.vbt-terms \.vbt-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px,1fr)); gap: 18px; max-width: 1000px; margin: 0 auto; }
+
+    /* כאשר יש 4 מושגים: שומרים על רוחב קפסולה וקובעים 2 בעמודה בכל שורה במסכים רחבים */
+    .vbt-terms .vbt-grid--two-fixed { display: grid; grid-template-columns: 1fr; gap: 18px; max-width: 1000px; margin: 0 auto; }
+    @media (min-width: 700px) { .vbt-terms .vbt-grid--two-fixed { grid-template-columns: repeat(2, minmax(0,1fr)); } }
 
     /* העדפת נגישות – פחות תנועה */
-    @media (prefers-reduced-motion: reduce) {
-      .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; }
-    }
+    @media (prefers-reduced-motion: reduce) { .vbt-terms .vbt-panel, .vbt-terms .vbt-icon, .vbt-terms .vbt-summary { transition: none; } }
   </style>
 </head>
 <body style="margin:0;">
@@ -67,14 +70,15 @@
 <div class="vbt-terms" dir="rtl" style="max-width:1120px;margin:0 auto;font-family: Alef,-apple-system,'Segoe UI',Arial,sans-serif;color:#0f172a;">
 
   <!-- גריד רספונסיבי -->
-  <div class="vbt-grid">
+  <div class="vbt-grid vbt-grid--two-fixed">
 
     <!-- ===== המשכיות יהודית ===== -->
     <div class="vbt-acc">
       <input class="vbt-toggle" type="checkbox" id="vbt-t1" />
       <label class="vbt-summary" for="vbt-t1" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">המשכיות יהודית</span>
+        <span class="vbt-title">המשכיות יהודית</span>
+        <span class="vbt-pm" aria-hidden="true"></span>
       </label>
       <div class="vbt-panel">
         המשכיות יהודית: יוזמה שהרב זקס הקים במטרה להחיות ולחזק את הזהות היהודית בקהילות יהודיות, במיוחד בקהילות אנגלו-יהודיות, ולהתמודד עם אתגרי ההתבוללות והאסימילציה.
@@ -86,7 +90,8 @@
       <input class="vbt-toggle" type="checkbox" id="vbt-t2" />
       <label class="vbt-summary" for="vbt-t2" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">מנהיגות שיתופית</span>
+        <span class="vbt-title">מנהיגות שיתופית</span>
+        <span class="vbt-pm" aria-hidden="true"></span>
       </label>
       <div class="vbt-panel">
         מנהיגות שיתופית: הרב זקס פעל לגייס אנשים ממגוון תחומים מקצועיים, כולל חינוך, אמנות, ותחומים אחרים, כדי להוביל את יוזמת המשכיות ולחזק את הקהילה היהודית על ידי יצירת שיתופי פעולה רחבים.
@@ -98,7 +103,8 @@
       <input class="vbt-toggle" type="checkbox" id="vbt-t3" />
       <label class="vbt-summary" for="vbt-t3" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">אחדות</span>
+        <span class="vbt-title">אחדות</span>
+        <span class="vbt-pm" aria-hidden="true"></span>
       </label>
       <div class="vbt-panel">
         אחדות: הרב זקס חיפש לקדם את רעיון האחדות היהודית, כאשר כל יהודי יכול לתרום את חלקו ולחוות את הצד הרוחני שבזהותו היהודית, כפי שנראה גם בהשפעתו על החברה הישראלית.
@@ -110,7 +116,8 @@
       <input class="vbt-toggle" type="checkbox" id="vbt-t4" />
       <label class="vbt-summary" for="vbt-t4" role="button" tabindex="0">
         <span class="vbt-icon">i</span>
-        <span style="flex:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;text-align:right;">דת ומדע</span>
+        <span class="vbt-title">דת ומדע</span>
+        <span class="vbt-pm" aria-hidden="true"></span>
       </label>
       <div class="vbt-panel">
         דת ומדע: שני אופני הבנה של המציאות, שלעיתים נתפסים כניגודים ולעיתים כמשלימים. המדע מבוסס על תצפיות, חוקים טבעיים ושיטתיות אמפירית, בעוד הדת עוסקת במשמעות, מוסר וטרנסצנדנטיות. שאלת היחס בין הדת למדע מלווה את ההגות היהודית. הרב זקס טוען שהם משלימים זה את זה.
@@ -120,14 +127,14 @@
   </div>
 </div>
 
-<!-- Auto-Resize (ילד): מודד גובה ושולח להורה גם בפתיחה וגם בסגירה -->
+<!-- Auto-Resize: מדידות גם בפתיחה וגם בסגירה -->
 <script>
 (function () {
   function computeHeight(){
     var b = document.body, d = document.documentElement;
     return Math.max(d.scrollHeight, b.scrollHeight, d.offsetHeight, b.offsetHeight, d.clientHeight, b.clientHeight);
   }
-  function sendHeight(){ parent.postMessage({ type: 'termsHeight', height: Math.ceil(computeHeight()) }, '*'); }
+  function sendHeight(){ try { parent.postMessage({ type: 'termsHeight', height: Math.ceil(computeHeight()) }, '*'); } catch(e){} }
   function burst(ms){ var end=Date.now()+(ms||800); (function step(){ sendHeight(); if(Date.now()<end) requestAnimationFrame(step); })(); }
 
   if ('ResizeObserver' in window) {
