--- a/Module06LTR.html
+++ b/Module06LTR.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Modernity, Vision, and Leadership – Mind-Map (Module 1 – LTR)</title>
+<title>Living Legacy – Mind-Map (Module 6 – LTR)</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -118,16 +118,16 @@
   </div>
 </div>
 
-<!-- === DATA: Modernity, Vision, and Leadership Module === -->
+<!-- === DATA: Living Legacy Module === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "ltr",
   "flow": "ltr",
   "root": {
-    "label": "Modernity, Vision, and Leadership",
+    "label": "Living Legacy",
     "children": [
       {
-        "label": "Lesson #01 – Tradition, Modernity, and Pluralism",
+        "label": "Lesson #01 – The Thought of Rabbi Sacks: Between Public Memory and Inspiration",
         "children": [
           { "label": "The student will examine the philosophical tension between commitment to tradition and belonging to a modern, pluralistic world." },
           { "label": "The student will analyze Rabbi Sacks's approach to modernity as both a challenge and an opportunity for spiritual renewal." },
